--- a/vs/workbench/parts/files/browser/media/explorerviewlet.css
+++ b/vs/workbench/parts/files/browser/media/explorerviewlet.css
@@ -21,8 +21,8 @@
 	overflow: hidden;
 }
 
-.explorer-viewlet .explorer-item-label {
-	display: inline-block;
+.explorer-viewlet .explorer-item-label, .explorer-viewlet .explorer-item .monaco-inputbox {
+	display: inline-block; /* required for icons support :before rule */
 }
 
 .explorer-viewlet .explorer-open-editors .monaco-tree .monaco-tree-row > .content {
