Fixes #10330: Do not use outline-offset

--- a/vs/base/browser/ui/scrollbar/media/scrollbars.css
+++ b/vs/base/browser/ui/scrollbar/media/scrollbars.css
@@ -102,17 +102,14 @@
 	background: rgba(121, 121, 121, .4);
 }
 .hc-black .monaco-scrollable-element > .scrollbar > .slider {
-	background: none;
-	outline: 20px solid #6FC3DF; /* IE and Edge render no backgrounds, so we must use borders/outlines */
-	outline-offset: -20px;
-	opacity: .4;
+	background: rgba(111, 195, 223, .6);
 }
 
 .monaco-scrollable-element > .scrollbar > .slider:hover {
 	background: rgba(100, 100, 100, .7);
 }
 .hc-black .monaco-scrollable-element > .scrollbar > .slider:hover {
-	opacity: .85;
+	background: rgba(111, 195, 223, .8);
 }
 
 .monaco-scrollable-element > .scrollbar > .slider.active {
@@ -122,5 +119,5 @@
 	background: rgba(191, 191, 191, .4);
 }
 .hc-black .monaco-scrollable-element > .scrollbar > .slider.active {
-	opacity: .9;
+	background: rgba(111, 195, 223, 1);
 }
