--- a/vs/workbench/parts/files/browser/media/explorerviewlet.css
+++ b/vs/workbench/parts/files/browser/media/explorerviewlet.css
@@ -21,7 +21,8 @@
 	overflow: hidden;
 }
 
-.explorer-viewlet .explorer-item-label, .explorer-viewlet .explorer-item .monaco-inputbox {
+.explorer-viewlet .explorer-item-label,
+.explorer-viewlet .explorer-item .monaco-inputbox {
 	display: inline-block; /* required for icons support :before rule */
 }
 
@@ -94,6 +95,10 @@
 .explorer-viewlet .explorer-item .monaco-inputbox {
 	width: 100%;
 	line-height: normal;
+}
+
+.explorer-viewlet .explorer-folders-view.show-file-icons .explorer-item .monaco-inputbox {
+	width: calc(100% - 20px); /* accomodate for icons pushing (16px width + 4px padding) */
 }
 
 .monaco-workbench.linux .explorer-viewlet .explorer-item .monaco-inputbox,
