--- a/vs/workbench/parts/extensions/electron-browser/media/extensionEditor.css
+++ b/vs/workbench/parts/extensions/electron-browser/media/extensionEditor.css
@@ -135,5 +135,65 @@
 
 .extension-editor > .body > .content {
 	height: calc(100% - 36px);
-	overflow: hidden;
+}
+
+.extension-editor > .body > .content > .subcontent {
+	height: 100%;
+	padding: 20px;
+	overflow-y: scroll;
+	box-sizing: border-box;
+}
+
+.extension-editor > .body > .content table {
+	border-spacing: 0;
+	border-collapse: separate;
+}
+
+.extension-editor > .body > .content details > summary {
+	cursor: pointer;
+	margin-bottom: 10px;
+	font-weight: bold;
+	font-size: 120%;
+}
+
+.extension-editor > .body > .content details > summary:focus {
+	outline: none;
+}
+
+.extension-editor > .body > .content details > summary::-webkit-details-marker {
+	color: rgba(128, 128, 128, 0.5);
+}
+
+.extension-editor > .body > .content table tr:nth-child(odd) {
+	background-color: rgba(130, 130, 130, 0.04);
+}
+
+.extension-editor > .body > .content table tr:not(:first-child):hover {
+	background-color: rgba(128, 128, 128, 0.15);
+}
+
+.extension-editor > .body > .content table th {
+	border-bottom: 1px solid rgba(144, 144, 144, 0.5);
+}
+
+.extension-editor > .body > .content table th,
+.extension-editor > .body > .content table td {
+	padding: 2px 16px 2px 4px;
+}
+
+.extension-editor > .body > .content table th:last-child,
+.extension-editor > .body > .content table td:last-child {
+	padding: 2px 4px;
+}
+
+.extension-editor > .body > .content table th {
+	text-align: left;
+}
+
+.extension-editor table.settings code {
+	font-family: Monaco, Menlo, Consolas, "Droid Sans Mono", "Inconsolata", "Courier New", monospace, "Droid Sans Fallback";
+	font-size: 80%;
+	background-color: rgba(128, 128, 128, 0.17);
+	border-radius: 4px;
+	padding: 1px 4px;
 }
