--- a/vs/workbench/parts/extensions/electron-browser/media/extensionEditor.css
+++ b/vs/workbench/parts/extensions/electron-browser/media/extensionEditor.css
@@ -191,7 +191,7 @@
 	text-align: left;
 }
 
-.extension-editor table.settings code {
+.extension-editor > .body > .content table code {
 	font-family: Monaco, Menlo, Consolas, "Droid Sans Mono", "Inconsolata", "Courier New", monospace, "Droid Sans Fallback";
 	font-size: 80%;
 	background-color: rgba(128, 128, 128, 0.17);
