extension editor: proper scrollbar

--- a/vs/workbench/parts/extensions/electron-browser/media/extensionEditor.css
+++ b/vs/workbench/parts/extensions/electron-browser/media/extensionEditor.css
@@ -134,7 +134,11 @@
 	height: calc(100% - 36px);
 }
 
-.extension-editor > .body > .content > .subcontent {
+.extension-editor > .body > .content > .monaco-scrollable-element {
+	height: 100%;
+}
+
+.extension-editor > .body > .content > .monaco-scrollable-element > .subcontent {
 	height: 100%;
 	padding: 20px;
 	overflow-y: scroll;
