--- a/vs/editor/contrib/hover/browser/hover.css
+++ b/vs/editor/contrib/hover/browser/hover.css
@@ -30,6 +30,8 @@
 	overflow: hidden;
 
 	white-space: pre-wrap;
+
+	box-sizing: initial;
 }
 
 .monaco-editor.vs-dark .monaco-editor-hover { border-color: #555; }
