--- a/vs/editor/contrib/hover/browser/hover.css
+++ b/vs/editor/contrib/hover/browser/hover.css
@@ -34,6 +34,10 @@
 	box-sizing: initial;
 }
 
+.monaco-editor-hover p {
+	margin: 0;
+}
+
 .monaco-editor.vs-dark .monaco-editor-hover { border-color: #555; }
 .monaco-editor.vs-dark .monaco-editor-hover a { color: #1C5DAF; }
 
