--- a/vs/editor/browser/widget/media/editor.css
+++ b/vs/editor/browser/widget/media/editor.css
@@ -112,11 +112,11 @@
 	top: 0;
 }
 
-/* -------------------- Highlight a line -------------------- */
+/* -------------------- Highlight a range -------------------- */
 
-.monaco-editor.vs		.lineHighlight { background: rgba(253, 255, 0, 0.2); }
-.monaco-editor.vs-dark	.lineHighlight { background: rgba(243, 240, 245, 0.2); }
-.monaco-editor.hc-black	.lineHighlight { background: rgba(243, 240, 245, 0.2); }
+.monaco-editor.vs		.rangeHighlight { background: rgba(253, 255, 0, 0.2); }
+.monaco-editor.vs-dark	.rangeHighlight { background: rgba(243, 240, 245, 0.2); }
+.monaco-editor.hc-black	.rangeHighlight { background: rgba(243, 240, 245, 0.2); }
 
 /* -------------------- Squigglies -------------------- */
 
