Fixes #8253: Disable font ligatures if `editor.fontLigatures` is false

--- a/vs/editor/browser/widget/media/editor.css
+++ b/vs/editor/browser/widget/media/editor.css
@@ -22,6 +22,8 @@
 	overflow: visible;
 	-webkit-text-size-adjust: 100%;
 	-ms-high-contrast-adjust: none;
+	-webkit-font-feature-settings: "liga" off, "calt" off;
+	font-feature-settings: "liga" off, "calt" off;
 }
 .monaco-editor.enable-ligatures {
 	-webkit-font-feature-settings: "liga" on, "calt" on;
