--- a/vs/workbench/parts/debug/browser/media/debug.contribution.css
+++ b/vs/workbench/parts/debug/browser/media/debug.contribution.css
@@ -71,6 +71,16 @@
 	background: #CC6633 !important;
 }
 
+/* Error editor */
+.debug-error-editor:focus {
+	outline: none !important;
+}
+
+.debug-error-editor {
+	padding: 5px 0 0 10px;
+	box-sizing: border-box;
+}
+
 /* Actionbar actions */
 
 .monaco-workbench .debug-action.step-over,
