--- a/vs/editor/contrib/parameterHints/browser/parameterHints.css
+++ b/vs/editor/contrib/parameterHints/browser/parameterHints.css
@@ -7,9 +7,9 @@
 	z-index: 10;
 	background-color: #F3F3F3;
 	border: 1px solid rgb(200, 200, 200);
-	/*padding: 0 0.5em 0 0.5em;*/
 	display: flex;
 	flex-direction: column;
+	line-height: 1.5em;
 }
 
 .monaco-editor .parameter-hints-widget > .wrapper {
@@ -58,7 +58,6 @@
 .monaco-editor .parameter-hints-widget .docs {
 	height: 100%;
 	padding: 0 10px 0 5px;
-	font-size: 95%;
 }
 
 .monaco-editor .parameter-hints-widget .buttons {
