Fix various issues when the terminal was not open on launch
Fixes #11969

--- a/vs/workbench/parts/terminal/electron-browser/media/terminal.css
+++ b/vs/workbench/parts/terminal/electron-browser/media/terminal.css
@@ -22,6 +22,7 @@
 	display: flex;
 	padding: 0 20px;
 	flex-grow: 1;
+	width: 100%;
 }
 
 .monaco-workbench .panel.integrated-terminal .terminal-wrapper {
