--- a/vs/editor/browser/viewParts/lineNumbers/lineNumbers.css
+++ b/vs/editor/browser/viewParts/lineNumbers/lineNumbers.css
@@ -12,7 +12,8 @@
 	cursor: default;
 }
 
-.monaco-workbench .monaco-editor .margin-view-overlays .line-numbers {
+/* disable until https://github.com/Microsoft/vscode/issues/8708 is fixed */
+/*.monaco-workbench .monaco-editor .margin-view-overlays .line-numbers {
 	cursor: -webkit-image-set(
 		url('flipped-cursor.svg') 1x,
 		url('flipped-cursor-2x.svg') 2x
@@ -24,7 +25,7 @@
 		url('flipped-cursor-mac.svg') 1x,
 		url('flipped-cursor-mac-2x.svg') 2x
 	) 24 3, default;
-}
+}*/
 
 .monaco-editor .margin-view-overlays .line-numbers.lh-odd {
 	margin-top: 1px;
